<resources>
    <string name="app_name">Tip Time</string>
    <string name="how_was_the_service">How Was The Service?</string>
    <string name="cost_of_service">Cost Of Service</string>
    <string name="amazing_20">Amazing 20%</string>
    <string name="good_18">Good 18%</string>
    <string name="round_up_tip">Round up tip?</string>
    <string name="calculate">calculate</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="mail">mail</string>
    <string name="ok_15">OK 15%</string>

</resources>